--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,6 +29,10 @@
       <%= link_to "Buat Produk Baru", new_product_path, class: button_classes %>
     </div>
   </div>
+  
+  <!-- Search Form -->
+  <%= render 'shared/search_form', resource_type: 'products' %>
+  
   <% if @products.any? %>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <% @products.each do |product| %>
@@ -77,6 +81,9 @@
         </div>
       <% end %>
     </div>
+    
+    <!-- Pagination -->
+    <%= render 'shared/pagination', pagy: @pagy %>
   <% else %>
     <div class="<%= card_classes %>">
       <div class="text-center py-12">
