--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
             <%= link_to "Bahan", ingredients_path, class: nav_link_classes(request.path.start_with?('/ingredients')) %>
             <%= link_to "Produk", products_path, class: nav_link_classes(request.path.start_with?('/products')) %>
             <%= link_to "Pasar", market_simulations_path, class: nav_link_classes(request.path.start_with?('/market_simulations')) %>
+            <%= link_to "Settings", settings_path, class: nav_link_classes(request.path.start_with?('/settings') || request.path.start_with?('/units') || request.path.start_with?('/ingredient_types')) %>
           </div>
           <!-- Mobile menu button -->
           <div class="md:hidden flex items-center">
@@ -52,6 +53,7 @@
           <%= link_to "Bahan", ingredients_path, class: mobile_nav_link_classes(request.path.start_with?('/ingredients')) %>
           <%= link_to "Produk", products_path, class: mobile_nav_link_classes(request.path.start_with?('/products')) %>
           <%= link_to "Pasar", market_simulations_path, class: mobile_nav_link_classes(request.path.start_with?('/market_simulations')) %>
+          <%= link_to "Settings", settings_path, class: mobile_nav_link_classes(request.path.start_with?('/settings') || request.path.start_with?('/units') || request.path.start_with?('/ingredient_types')) %>
         </div>
       </div>
     </nav>
