--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -73,12 +73,22 @@
                       <%= ingredient.description %>
                     </p>
                   <% end %>
+                  <% if ingredient.ingredient_type == 'kemasan' && ingredient.ingredient_detail&.package_size.present? %>
+                    <div class="text-xs text-blue-400 mt-1">
+                      📦 <%= ingredient.ingredient_detail.package_size %> <%= ingredient.ingredient_detail.package_unit %> per kemasan
+                    </div>
+                  <% end %>
                 </div>
                 <div class="text-right">
                   <div class="text-lg font-bold text-gray-100">
-                    <%= format_rupiah(ingredient.price) %>
+                    <% if ingredient.ingredient_type == 'kemasan' && ingredient.ingredient_detail&.package_size.present? %>
+                      <%= format_rupiah(ingredient.unit_price) %>
+                      <div class="text-xs text-gray-500">(<%= format_rupiah(ingredient.price) %>/<%= ingredient.unit %>)</div>
+                    <% else %>
+                      <%= format_rupiah(ingredient.price) %>
+                    <% end %>
                   </div>
-                  <div class="text-xs text-gray-400">per <%= ingredient.unit %></div>
+                  <div class="text-xs text-gray-400">per <%= ingredient.effective_unit %></div>
                 </div>
               </div>
               <div class="flex items-center space-x-2 ml-4 opacity-0 group-hover:opacity-100 transition-opacity duration-150">
