--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -65,10 +65,10 @@
               <div class="flex items-center space-x-2">
                 <div class="w-2 h-2 bg-indigo-500 rounded-full"></div>
                 <span class="text-gray-100"><%= ri.ingredient.name %></span>
-                <span class="text-sm text-gray-400">(<%= ri.quantity %> <%= ri.ingredient.unit %>)</span>
+                <span class="text-sm text-gray-400">(<%= ri.quantity %> <%= ri.ingredient.effective_unit %>)</span>
               </div>
               <span class="text-sm font-medium text-gray-100">
-                $<%= number_with_precision(ri.ingredient.price * ri.quantity, precision: 2) %>
+                $<%= number_with_precision(ri.calculate_cost, precision: 2) %>
               </span>
             </div>
           <% end %>
